# pixelarium

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .mega-linter.yml  CMakeLists.txt  CMakePresets.json  Readme.org
.github/workflows/: build-gcc.yml  build-ubuntu.yml  build-windows.yml  ci-workflow.yml  cmake.yml  generate-docs.yml  mega-linter.yml
cmake/: awesomeDoxygen.cmake  libCZI.cmake
doc/: Doxyfile.in  index.md  versions.md
examples/: CMakeLists.txt
examples/custom_0/: CMakeLists.txt  custom_0.cpp  main.cpp
examples/custom_1/: CMakeLists.txt  custom_1.cpp
examples/simple/: CMakeLists.txt  main.cpp  simple.cpp
lib/: CMakeLists.txt
lib/app/: AppGLFW.cpp  AppGLFW.hpp  CMakeLists.txt  DefaultApp.cpp  DefaultApp.hpp  PixelariumGallery.cpp  PixelariumGallery.hpp  app_resources_default.h.in  uiresources_app.h.in
lib/imaging/: CMakeLists.txt  IPixelariumImage.hpp  Image.cpp  Image.hpp  PixelariumImage.cpp  PixelariumImage.hpp  PixelariumImageFactory.cpp  PixelariumImageFactory.hpp
lib/imaging/impl/: PixelariumCzi.cpp  PixelariumCzi.hpp  PixelariumJpg.cpp  PixelariumJpg.hpp  PixelariumMem.cpp  PixelariumMem.hpp  PixelariumPng.cpp  PixelariumPng.hpp  PixelariumTiff.cpp  PixelariumTiff.hpp
lib/rendering/: CMakeLists.txt  CvMatRender.cpp  CvMatRender.hpp  IPixelariumImageView.hpp  ImageViewFactory.cpp  ImageViewFactory.hpp  PixelariumImageView.cpp  PixelariumImageView.hpp  PixelariumImageViewCzi.cpp  PixelariumImageViewCzi.hpp  PixelariumImageViewDefault.cpp  PixelariumImageViewDefault.hpp  RenderHelpers.cpp  RenderHelpers.hpp  RenderImageManager.cpp  RenderImageManager.hpp
lib/resources/: CMakeLists.txt  IResource.hpp  resource.cpp  resource.hpp
lib/utilities/: CMakeLists.txt  ILog.hpp  SpdLogger.cpp  SpdLogger.hpp
modules/: googletest.cmake
src/: AppGLFW.cpp  AppGLFW.hpp  CMakeLists.txt  MyApp.cpp  MyApp.hpp  RenderImageManager.cpp  RenderImageManager.hpp  app_resources_local.h.in  main.cpp  uiresources.h.in  uiresources_local.h.in
src/viewmodels/: ImageViewFactory.cpp  ImageViewFactory.hpp
src/views/: PixelariumImageView.cpp  PixelariumImageView.hpp
tests/: CMakeLists.txt
tests/lib/resources/: test_resource.cpp
